Make an index's recovery strategy immutable, and refuse a mismatch at creation
An index is one kind or the other for its whole life, so index.recovery.strategy
was the wrong shape: freely settable and updatable, it made representable a
state that should not exist -- an index told to recover by a method that cannot
read what it has written.

- The setting is now Final. An update would be acknowledged immediately and do
  its damage at the next recovery, long afterwards. There is no migration
  between strategies to express, so it is fixed at creation like the storage
  opt-in it accompanies, which is already Final for the same reason.

- New ServerlessStorageRecoveryStrategyValidator refuses, at index creation, a
  serverless index whose strategy is not object-store. This closes a real hole
  rather than a theoretical one: MetadataCreateIndexService applies setting
  provider values BEFORE the request's own settings, so an explicit
  index.recovery.strategy in a create request wins over the one the provider
  injects. A request carrying both serverless_storage.enabled: true and
  recovery.strategy: local-lucene was accepted, and the contradiction surfaced
  much later as a shard that would not open. Creation is also the only moment
  the mismatch can still be repaired, since both settings are final afterwards.

- The engine-construction check added with the seam work is demoted to a
  backstop and its javadoc says so. It stays because creation is not the only
  way a shard arrives -- a restore, or a node with a different plugin set,
  reaches it without passing the validator -- but it should now be unreachable,
  and if it fires it reports an invariant break rather than an operator mistake.

The one case the backstop is still expected to fire is unchanged and still
documented: an index created before the setting existed reads the local-lucene
default. Refusing it is correct, and the fix is an index-metadata upgrader that
back-fills the setting, not a looser check.

V